--- a/src/components/CatergoryItem/CategoryItem.css
+++ b/src/components/CatergoryItem/CategoryItem.css
@@ -1,15 +1,16 @@
 .category-item {
   width: 10%;
-  background-color: khaki;
+  background-color: #ffffff;
   float: left;
-  border: 1px solid green;
+  border: 2px solid #f5f5f5;
   text-align: center;
   font-size: 100%;
 }
 
-.link {
-  text-decoration: none;
+.category-item:hover {
+  width: 11%;
 }
+
 
 .category-item img {
   width: 100%;
