--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -12,8 +12,7 @@
 /* Bordered form */
 
 /* Full-width inputs */
-input[type="text"],
-input[type="password"] {
+.logininput {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -23,7 +22,7 @@ input[type="password"] {
 }
 
 /* Set a style for all buttons */
-button {
+.login-btn {
   background-color: #4caf50;
   color: white;
   padding: 14px 20px;
