--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -1,39 +1,261 @@
-.product-item {
-  width: 10%;
-  background-color: #ffffff;
-  float: left;
-  border: 2px solid #f5f5f5;
-  text-align: center;
-  font-size: 100%;
+.cha {
+  position: relative;
+}
+.danhmuc li a {
+  color: #666;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-bottom: 1px solid #f0f0f0;
+  line-height: 40px;
+  display: block;
+  text-decoration: none;
+}
+.danhmuc li a:hover {
+  color: #ff173c;
+}
+.danhmuc li a:hover .icondanhmuc {
+  transform: scale(1.5);
+  transition: 0.1s;
 }
 
-.product-item:hover {
-  /* width: 11%; */
-  border: 2px solid red;
+.icondanhmuc {
+  transition: 0.1s;
+  height: 20px;
 }
 
-.product-item img {
+.con {
+  position: absolute;
+  top: 0%;
+  right: 0;
+  transform: translateX(100%);
+  height: 100%;
   width: 100%;
+  visibility: hidden;
+  z-index: 2;
+  transition: 0.3s;
+  opacity: 0;
+}
+.bentraidanhmuc li {
+  display: inline-block;
+}
+.bentraidanhmuc li a {
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
 }
 
-.productName {
-  width: 100%;
+.bentraidanhmuc li a:hover {
+  color: orangered;
+}
+
+.motsanpham {
+  position: relative;
   overflow: hidden;
-  height: 5vh;
-  line-height: 5vh;
+  width: 100%;
+  height: 400px;
+  text-decoration: none;
+  display: inline-block;
 }
 
-.cost {
-  float: left;
-  color: firebrick;
+.motsanpham .banner {
+  position: absolute;
+  width: 15%;
+  height: 10%;
+  right: 1%;
+  top: 1%;
+  z-index: 2;
 }
 
-.sold {
-  float: right;
-  font-size: smaller;
-  margin-top: 0.5vh;
+.motsanpham .anhsp {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 70%;
+  border-radius: 5px;
 }
 
-.productInfo {
-  margin: 1vh;
+.motsanpham .tieude,
+.motsanpham .thanhbar,
+.motsanpham .gia {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.motsanpham .tieude {
+  bottom: 20%;
+  font-weight: bold;
+}
+.motsanpham .gia {
+  bottom: 12%;
+  font-size: large;
+  color: orangered;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.motsanpham .thanhbar {
+  bottom: 5%;
+  width: 80%;
+}
+
+.motsanpham .progress {
+  border-radius: 10px;
+  position: relative;
+}
+.motsanpham .progress-bar {
+  background-color: orangered;
+  text-align: center;
+}
+
+/* Tuy chinh phan layer control*/
+.motsanpham .layer {
+  position: absolute;
+  width: 100%;
+  height: 70%;
+  z-index: 1;
+  background-image: linear-gradient(to right, red, yellow);
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.motsanpham .layerbox {
+  position: absolute;
+  width: 120%;
+  height: 40%;
+  z-index: 2;
+  border: solid 2px rgb(255, 255, 255);
+  top: 35%;
+  left: 50%;
+  transform: translateY(-55%) translateX(-50%);
+  /* ba dau cho nao ko quan trong */
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.motsanpham .controls {
+  position: absolute;
+  width: 100%;
+  height: 70%;
+  z-index: 3;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  opacity: 0;
+  transform: translateY(23px);
+  transition: 0.3s;
+}
+
+.motsanpham .controls .iconcontrol {
+  cursor: pointer;
+  z-index: 3;
+  font-size: x-large;
+  color: orangered;
+}
+.motsanpham .controls button:hover {
+  transform: scale(1.25);
+  transition: 0.3s;
+}
+
+.motsanpham .controls button {
+  padding: 5px;
+  background-color: white;
+  display: inline-block;
+  border-radius: 3px;
+  width: 20%;
+  z-index: 4;
+  transition: 0.3s;
+}
+
+/* tuy chinh hover */
+.motsanpham:hover .layer {
+  opacity: 0.3;
+  transition: 0.3s;
+}
+
+.motsanpham:hover .layerbox {
+  opacity: 1;
+  transform: translateY(-50%) translateX(-50%);
+  transition: 0.3s;
+}
+.motsanpham:hover .controls {
+  opacity: 1;
+  transform: translateY(0);
+  transition: 0.3s;
+}
+
+/* danh muc phan khac*/
+.motsanpham .danhmucphanduoi {
+  position: absolute;
+  left: 3%;
+  bottom: 0%;
+}
+.motsanpham .gia2 {
+  font-size: large;
+  color: orangered;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.motsanpham .diadiem {
+  position: absolute;
+  bottom: 0%;
+  right: 2%;
+}
+
+/* hieu ung cho model box */
+.momoaoao {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 5;
+  background: #2c05058a;
+  transition: 0.3s;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  top: 0;
+  left: 0;
+}
+.momoaoao.hienra {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal_box {
+  width: 50%;
+  max-width: 630px;
+  min-width: 320px;
+  height: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 10;
+  font-size: 20px;
+  visibility: hidden;
+  transition: 0.3s;
+}
+
+.modal_content {
+  display: inline-block;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px 5px;
+  width: 100%;
+  transition: 0.3s;
+}
+
+.modal_ef {
+  perspective: 1300px;
+}
+.modal_ef .modal_content {
+  opacity: 0;
+  transform: rotateY(-70deg);
+  transform-origin: 50% 0%;
+  visibility: hidden;
+}
+
+.modal_show.modal_ef .modal_content {
+  opacity: 1;
+  transform: rotateY(0deg);
+  visibility: visible;
 }
